test/types/void/void-field-3.good
void-field-3.chpl:6: error: Field 'a' cannot be declared 'void'. Consider using 'nothing' instead.
