test/types/void/void-field-3.chpl
proc t() type {
  return void;
}

record r {
  var a : t();
}
